wip: large menu

--- a/config.yaml
+++ b/config.yaml
@@ -3,3 +3,6 @@ params:
   logo:
     header: "/assets/images/logo.svg"
     footer: "/assets/images/logo.svg"
+  menu:
+    dropdown:
+      linkToLevel1: true
