--- a/config.yaml
+++ b/config.yaml
@@ -2,7 +2,12 @@ theme: osuny
 params:
   logo:
     header: "/assets/images/logo.svg"
-    footer: "/assets/images/logo.svg"
+    footer: "/assets/images/logos/cids.svg"
   menu:
     dropdown:
       linkToLevel1: true
+  search:
+    active: true
+    position: top-menu
+  summary:
+    position: content
