--- a/config.yaml
+++ b/config.yaml
@@ -8,6 +8,6 @@ params:
       linkToLevel1: true
   search:
     active: true
-    position: top-menu
+    position: upper-menu
   summary:
     position: content
