--- a/config.yaml
+++ b/config.yaml
@@ -14,6 +14,9 @@ params:
   toc:
     force_offcanvas: true
   image_sizes:
+    blocks:
+      image:
+        desktop:  2600x2600
     design_system:
       hero:
         desktop:  1920
